@@ -20,7 +20,7 @@ namespace dgm
 		virtual dgm::Clip loadClipFromFile(const std::string&) const = 0;
 
 		[[nodiscard]]
-		virtual std::shared_ptr<dgm::AnimationStates> loadAnimationsFromFile(const std::string&) const = 0;
+		virtual dgm::AnimationStates loadAnimationsFromFile(const std::string&) const = 0;
 
 		virtual ~LoaderInterface() = default;
 	};
